# platformer

./: .gitignore  .gitmodules  .vimrc  BaseCollider.cpp  BaseCollider.h  BaseInterface.cpp  BaseInterface.h  BaseSprite.cpp  BaseSprite.h  Btn.cpp  Btn.h  CMakeLists.txt  CollidedUnit.cpp  CollidedUnit.h  DebugRectSprite.cpp  DebugRectSprite.h  DynamicCollider.cpp  DynamicCollider.h  DynamicUnit.cpp  DynamicUnit.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameStage.cpp  GameStage.h  InputEvent.cpp  InputEvent.h  InteractiveUnit.cpp  InteractiveUnit.h  Landscape.cpp  Landscape.h  Level.cpp  Level.h  Light.cpp  Light.h  Makefile  Menu.cpp  Menu.h  ObjectLoader.cpp  (+31 more)
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
res/: map.json  menu.xml  nmap.json  nmap_tileset.json  pixeland.json  res.xml  sounds.xml  tileset.json
res/fonts/: pixograd.fnt  stamper.fnt
res/img/: close_button.xcf  panel.xcf  pixeland.xcf  treasure.xcf
res/img/menu/: button.xcf  exit_button.xcf
res/map/: nmap.json  nmap.tmx  nmap_tileset.tsx
src/: DebugRectSprite.cpp  DebugRectSprite.h  Game.cpp  Game.h  GameStage.cpp  InputEvent.cpp  InputEvent.h  Light.cpp  ObjectLoader.cpp  Player.cpp  Player.h  SoundManager.cpp  SoundManager.h  StartMenu.cpp  TextPanel.cpp  TiledLevel.cpp  TiledLevel.h  TiledSprite.cpp  TiledSprite.h  Unit.cpp  base.h  resources.cpp  resources.h
